[package]
name = "oxidizer"
version = "0.2.1"
authors = ["Zach Griffin (0xTas) <root@0xTas.dev>"]
description = "An attempt at reversible Batch & Powershell obfuscation."
repository = "https://github.com/0xTas/0xidiz3r"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.6.0"